[package]
name = "mayocon_rating"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
chrono = "0.4.35"
headless_chrome = { version = "1.0.9", features = ["fetch"] }
regex = "1.10.4"
reqwest = "0.12.1"
scraper = "0.19.0"
sqlx = { version = "0.7", features = [ "sqlite" ] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4", features = ["derive"] }
